--- a/public/style.css
+++ b/public/style.css
@@ -16,3 +16,28 @@
   background-color: rgb(119, 108, 96);
 }
 
+@font-face {
+  font-family: 'Harry Potter';
+  font-style: normal;
+  font-weight: normal;
+  src: url('./harrypotter-ov4z-webfont.woff') format('woff');
+}
+.title
+{
+  font-family: 'Harry Potter';
+  text-align: center;
+  font-size: 4.2vw;
+  margin-top: 1vw;
+
+}
+
+body
+{
+  background-image: url('./background.png');
+  background-repeat: repeat-x;
+  background-position: center;
+  /* background-repeat: repeat-x; */
+  background-size: 90%;
+  position: sticky;
+}
+
