--- a/public/style.css
+++ b/public/style.css
@@ -36,8 +36,7 @@ body
   background-image: url('./background.png');
   background-repeat: repeat-x;
   background-position: center;
-  /* background-repeat: repeat-x; */
   background-size: 90%;
-  position: sticky;
+  background-attachment: fixed;
 }
 
