--- a/public/style.css
+++ b/public/style.css
@@ -26,9 +26,9 @@
 {
   font-family: 'Harry Potter';
   text-align: center;
-  font-size: 4.2vw;
+  font-size: 2.5vw;
   margin-top: 1vw;
-
+  text-shadow: 0 0 8px #d1bfbf;
 }
 
 body
@@ -68,4 +68,20 @@ body
   background-color: transparent;
   border-color: transparent;
   box-shadow: 0;
+}
+.floating {  
+  animation-name: floating;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  margin-left: 30px;
+  margin-top: 5px;
+
+}
+@keyframes floating {
+    from { transform: translate(0,  0px); }
+    35%  { transform: translate(15px, 15px); }
+    65%  { transform: translate(50px, 30px); }
+    85%  { transform: translate(30px, 40px); }
+    to   { transform: translate(0, -0px); }    
 }
